--- a/templates/flashcard-editor-modal.html
+++ b/templates/flashcard-editor-modal.html
@@ -284,7 +284,7 @@
 
                 <div x-show="flashcardEditorCardsExpanded" x-transition class="space-y-3 max-h-60 overflow-y-auto minimal-scrollbar">
                     <!-- Cards List -->
-                    <template x-for="(card, index) in flashcardEditorCards" :key="index">
+                    <template x-for="(card, index) in flashcardEditorCards" :key="(card.front + card.back).substring(0, 50) + index">
                         <div class="flex items-start gap-2" x-init="$nextTick(() => lucide.createIcons())">
                             <!-- Front Card -->
                             <div class="flex-1 bg-gradient-to-br from-purple-100 to-purple-200 dark:from-purple-900/40 dark:to-purple-800/40 rounded-lg p-3 border-2 border-purple-300 dark:border-purple-700 shadow-sm min-h-[60px] flex items-center justify-center">
